Fix broken WOFF font links on Firefox 4 firstrun and mobile pages that was introduced in r88707 Fixes [Bug 659481] New: wrong font displaying on Fx4 first run page
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@89374 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/mobile-m.css
+++ b/style/covehead/mobile-m.css
@@ -32,7 +32,7 @@ dd, p {
 
 @font-face {
     font-family: 'MetaBlack';
-    src: local('☺'), url('<?=$config['static_prefix']?>/img/fonts/MetaWebPro-Black.woff') format('woff');
+    src: local('☺'), url('/img/fonts/MetaWebPro-Black.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
