--- a/style/firefox/4/firstrun-page.css
+++ b/style/firefox/4/firstrun-page.css
@@ -61,7 +61,7 @@ footer:after {
 
 @font-face {
     font-family: 'MetaBlack';
-    src: local('☺'), url('<?=$config['static_prefix']?>/img/fonts/MetaWebPro-Black.woff') format('woff');
+    src: local('☺'), url('/img/fonts/MetaWebPro-Black.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
